generated/checkers/gen/AllGen-Memory-Leak-ca93bf607a44c1f009283dac4af7df0d9ae5e357/build_logs/syntax-repair-00/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreStmt(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:359:7: error: no match for ‘operator!’ (operand type is ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’)
  359 |   if (!Temps || Temps->isEmpty())
      |       ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:359:7: note: candidate: ‘operator!(bool)’ (built-in)
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:359:7: note:   no known conversion for argument 1 from ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’ to ‘bool’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:359:22: error: base operand of ‘->’ has non-pointer type ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’
  359 |   if (!Temps || Temps->isEmpty())
      |                      ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:364:23: error: base operand of ‘->’ has non-pointer type ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’
  364 |   for (auto It = Temps->begin(); It != Temps->end(); ++It) {
      |                       ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:364:45: error: base operand of ‘->’ has non-pointer type ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’
  364 |   for (auto It = Temps->begin(); It != Temps->end(); ++It) {
      |                                             ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:372:52: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  372 |   if (const Stmt *SAlloc = State->get<AllocSiteMap>(LeakMR))
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
      |                                                    |
      |                                                    clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
